// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders aboutpage unchanged 1`] = `
<div>
  <div>
    <h2>
      This is the about page
    </h2>
    <span>
      Go
    </span>
    <a
      href="/"
    >
      Back
    </a>
  </div>
</div>
`;

exports[`renders homepage unchanged 1`] = `
<div>
  <div>
    <h2
      data-testid="headingTestID"
    >
      Hello World Next App
    </h2>
    <span>
      Testing route, go to: 
    </span>
     
    <a
      href="/about"
    >
      About
    </a>
  </div>
</div>
`;
